[package]
name = "testing_test_context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
# futures ="0.3.21"
tokio = { version = "1.19.2", features = ["macros", "rt"] }
test-context = "0.1.3"
async-trait = "0.1.56"
